--- a/conf/messages.properties
+++ b/conf/messages.properties
@@ -1,7 +1,7 @@
-InC-OW-EU = More information about the Item may be found in the following entry in the EU Orphan Works Database: <a href="{0}" target="_blank">{0}</a>
+InC-OW-EU = More information about the Item may be found in the following entry in the EU Orphan Works Database: <a href="{0}" target="_blank" rel="nofollow">{0}</a>
 NoC-NC = The limitations on commercial use of this Item will expire on {0}
-NoC-CR = More information about the contractual restrictions can be found here: <a href="{0}" target="_blank">{0}</a>
-NoC-OKLR = More information about the legal restrictions can be found here: <a href="{0}" target="_blank">{0}</a>
+NoC-CR = More information about the contractual restrictions can be found here: <a href="{0}" target="_blank" rel="nofollow">{0}</a>
+NoC-OKLR = More information about the legal restrictions can be found here: <a href="{0}" target="_blank" rel="nofollow">{0}</a>
 Disclaimer = DISCLAIMER The purpose of this statement is to help the public understand how this Item may be used. When there is a (non-standard) License or contract that governs re-use of the associated Item, this statement only summarizes the effects of some of its terms. It is not a License, and should not be used to license your Work. To license your own Work, use a License offered at <a href="https://creativecommons.org/">https://creativecommons.org/</a>
 notices = Notices
 provider = This statement is provided by <a href="http://rightsstatements.org">rightsstatements.org</a>
