--- a/conf/messages_ca.properties
+++ b/conf/messages_ca.properties
@@ -1,7 +1,7 @@
-InC-OW-EU = M\u00e9s informaci\u00f3 sobre aquest material est\u00e0 disponible a la seg\u00fcent entrada de la Base de Dades d\u2019Obres \u00d2rfenes: <a href="{0}" target="_blank">{0}</a>
+InC-OW-EU = M\u00e9s informaci\u00f3 sobre aquest material est\u00e0 disponible a la seg\u00fcent entrada de la Base de Dades d\u2019Obres \u00d2rfenes: <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
 NoC-NC = Les limitacions per a usos comercials d\u2019aquest material acabaran el {0}
-NoC-CR = Podeu trobar m\u00e9s informaci\u00f3 sobre les limitacions contractuals aqu\u00ed: <a href="{0}" target="_blank">{0}</a>
-NoC-OKLR = Podeu trobar m\u00e9s informaci\u00f3 sobre les limitacions legals aqu\u00ed: <a href="{0}" target="_blank">{0}</a>
+NoC-CR = Podeu trobar m\u00e9s informaci\u00f3 sobre les limitacions contractuals aqu\u00ed: <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
+NoC-OKLR = Podeu trobar m\u00e9s informaci\u00f3 sobre les limitacions legals aqu\u00ed: <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
 Disclaimer = El prop\u00f2sit d\u2019aquesta Declaraci\u00f3 \u00e9s ajudar al p\u00fablic a entendre de quina manera pot utilitzar el material. Quan hi ha una llic\u00e8ncia o contracte (no est\u00e0ndard) que regula la reutilitzaci\u00f3 del material en q\u00fcesti\u00f3, aquesta Declaraci\u00f3 nom\u00e9s resumeix els efectes d\u2019algunes de les seves condicions. No \u00e9s una llic\u00e8ncia i no s\u2019hauria d\u2019utilitzar per llicenciar l\u2019obra. Per llicenciar una creaci\u00f3 pr\u00f2pia, utilitzeu una de les llic\u00e8ncies que proposa Creative Commons a <a href="https://creativecommons.org/">https://creativecommons.org/</a>
 notices = Observacions
 provider = Aquesta declaraci\u00f3 de drets est\u00e0 proporcionada per <a href="http://rightsstatements.org">rightsstatements.org</a>
