--- a/conf/messages_de.properties
+++ b/conf/messages_de.properties
@@ -1,7 +1,7 @@
-InC-OW-EU = Weitere Informationen zum Werk sind ggf. in dem folgenden Eintrag in der EU-Datenbank zu verwaisten Werken zu finden: <a href="{0}" target="_blank">{0}</a>
+InC-OW-EU = Weitere Informationen zum Werk sind ggf. in dem folgenden Eintrag in der EU-Datenbank zu verwaisten Werken zu finden: <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
 NoC-NC = Die Beschr\u00e4nkung der kommerziellen Nutzung dieses Objekts gilt bis zum: {0}
-NoC-CR = Weitergehende Informationen zu den vertraglichen Beschr\u00e4nkungen sind hier zu finden: <a href="{0}" target="_blank">{0}</a>
-NoC-OKLR = Weitergehende Informationen zu den rechtlichen Beschr\u00e4nkungen sind hier zu finden: <a href="{0}" target="_blank">{0}</a>
+NoC-CR = Weitergehende Informationen zu den vertraglichen Beschr\u00e4nkungen sind hier zu finden: <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
+NoC-OKLR = Weitergehende Informationen zu den rechtlichen Beschr\u00e4nkungen sind hier zu finden: <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
 Disclaimer = Dieser Rechtehinweis dient dazu, der Allgemeinheit zu helfen zu erkennen, wie das damit ausgezeichnete Objekt genutzt werden kann. Liegt zus\u00e4tzlich eine (nicht standardisierte) Lizenz oder ein Vertrag vor, der die Nutzung des zugeh\u00f6rigen Objektes regelt, fasst der vorliegende Rechtehinweis nur einige der Auswirkungen der darin enthaltenen Bedingungen zusammen. Der Rechtehinweis ist keine Lizenz und sollte nicht genutzt werden, um ein eigenes Werk zu lizenzieren. Um ein eigenes Werk zu lizenzieren, nutzen Sie bitte eine unter <a href="https://creativecommons.org/">https://creativecommons.org/</a> angebotene Lizenz.
 notices = Hinweise:
 provider = Dieser Rechtehinweis wird von <a href="http://rightsstatements.org/de/">rightsstatements.org</a> zur Verf\u00fcgung gestellt.
