--- a/conf/messages_es.properties
+++ b/conf/messages_es.properties
@@ -1,7 +1,7 @@
-InC-OW-EU = M\u00e1s informaci\u00f3n sobre el material puede encontrarse en la siguiente entrada en la Base de Datos de Obras Hu\u00e9rfanas de la Uni\u00f3n Europea: <a href="{0}" target="_blank">{0}</a>
+InC-OW-EU = M\u00e1s informaci\u00f3n sobre el material puede encontrarse en la siguiente entrada en la Base de Datos de Obras Hu\u00e9rfanas de la Uni\u00f3n Europea: <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
 NoC-NC = Las limitaciones sobre el uso comercial de este material expirar\u00e1n en {0}
-NoC-CR = M\u00e1s informaci\u00f3n sobre las restricciones contractuales disponible en: <a href="{0}" target="_blank">{0}</a>
-NoC-OKLR = M\u00e1s informaci\u00f3n sobre las restricciones legales disponible en: <a href="{0}" target="_blank">{0}</a>
+NoC-CR = M\u00e1s informaci\u00f3n sobre las restricciones contractuales disponible en: <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
+NoC-OKLR = M\u00e1s informaci\u00f3n sobre las restricciones legales disponible en: <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
 Disclaimer = AVISO LEGAL El prop\u00f3sito de esta declaraci\u00f3n es ayudar al p\u00fablico a entender de qu\u00e9 forma este material puede ser utilizado. Cuando exista una licencia (no est\u00e1ndar) o un contrato que regule la reutilizaci\u00f3n del material asociado, esta declaraci\u00f3n solamente resume los efectos de algunos de sus t\u00e9rminos. Esta declaraci\u00f3n no es una licencia y no debe ser utilizada para licenciar su obra. Para licenciar su propio trabajo, utilice una de las licencias disponibles en: <a href="https://creativecommons.org/">https://creativecommons.org/</a>
 notices = Advertencias
 provider = Esta declaraci\u00f3n es provista por <a href="http://rightsstatements.org">rightsstatements.org</a>
