--- a/conf/messages_et.properties
+++ b/conf/messages_et.properties
@@ -1,7 +1,7 @@
-InC-OW-EU = T\u00e4iendavat infot objekti kohta leiab sellekohasest EL orbteoste andmebaasi kandest: <a href="{0}" target="_blank">{0}</a>
+InC-OW-EU = T\u00e4iendavat infot objekti kohta leiab sellekohasest EL orbteoste andmebaasi kandest: <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
 NoC-NC = Objekti \u00e4rilise kasutuse piirangud l\u00f5ppevad: {0}
-NoC-CR = T\u00e4iendavat infot lepinguliste piirangute kohta leiate aadressilt: <a href="{0}" target="_blank">{0}</a>
-NoC-OKLR = T\u00e4iendavat infot \u00f5iguslike piirangute kohta leiate aadressilt: <a href="{0}" target="_blank">{0}</a>
+NoC-CR = T\u00e4iendavat infot lepinguliste piirangute kohta leiate aadressilt: <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
+NoC-OKLR = T\u00e4iendavat infot \u00f5iguslike piirangute kohta leiate aadressilt: <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
 Disclaimer = LAHTI\u00dcTLUS: Autori\u00f5igusliku seisundi deklaratsioon on m\u00f5eldud selgitama \u00fcldsusele objekti kasutamisv\u00f5imalusi. Juhul kui deklaratsiooni objektiks oleva objekti korduvkasutamist reguleerib (mittestandardne) litsents v\u00f5i leping, kujutab deklaratsioon endast vaid selle teatavate s\u00e4tete kokkuv\u00f5tet. See ei ole litsents ning seda ei peaks kasutama oma teose litsentseerimiseks. Oma isikliku loomingu litsentseerimiseks v\u00f5ite kasutada kodulehel <a href="https://creativecommons.org/">https://creativecommons.org/</a> pakutavaid litsentse.
 notices = M\u00e4rkused:
 provider = Deklaratsiooni allikaks on <a href="http://rightsstatements.org/et/">rightsstatements.org</a>.
