--- a/conf/messages_fi.properties
+++ b/conf/messages_fi.properties
@@ -1,7 +1,7 @@
-InC-OW-EU = EU:n orpoteostietokannassa on lis\u00e4tietoja t\u00e4st\u00e4 teoksesta osoitteessa: <a href="{0}" target="_blank">{0}</a>
+InC-OW-EU = EU:n orpoteostietokannassa on lis\u00e4tietoja t\u00e4st\u00e4 teoksesta osoitteessa: <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
 NoC-NC = Kohteen kaupallista k\u00e4ytt\u00f6\u00e4 koskevat rajoitukset p\u00e4\u00e4ttyv\u00e4t {0}
-NoC-CR = Lis\u00e4tietoa sopimuksellisista rajoituksista: <a href="{0}" target="_blank">{0}</a>
-NoC-OKLR = Lis\u00e4tietoa oikeudellisista rajoituksista: <a href="{0}" target="_blank">{0}</a>
+NoC-CR = Lis\u00e4tietoa sopimuksellisista rajoituksista: <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
+NoC-OKLR = Lis\u00e4tietoa oikeudellisista rajoituksista: <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
 Disclaimer = VASTUUVAPAUSLAUSEKE T\u00e4m\u00e4n kuvauksen tarkoituksena on auttaa yleis\u00f6\u00e4 ymm\u00e4rt\u00e4m\u00e4\u00e4n, kuinka t\u00e4t\u00e4 Kohdetta voi k\u00e4ytt\u00e4\u00e4. Silloin kun kyseisen Kohteen uudelleenk\u00e4yt\u00f6st\u00e4 m\u00e4\u00e4r\u00e4t\u00e4\u00e4n (muussa kuin vakiomuotoisessa) lisenssiss\u00e4 tai sopimuksessa, t\u00e4m\u00e4 kuvaus on ainoastaan tiivistelm\u00e4 ao. asiakirjan tiettyjen ehtojen vaikutuksista. K\u00e4ytt\u00f6oikeuskuvaus ei ole lisenssi, eik\u00e4 sit\u00e4 tule k\u00e4ytt\u00e4\u00e4 teoksesi lisensiointiin. Teoksesi lisensiointiin voit k\u00e4ytt\u00e4\u00e4 seuraavassa osoitteessa saatavilla olevia lisenssej\u00e4: <a href="https://creativecommons.org/">https://creativecommons.org/</a>
 notices = Huomautukset
 provider = T\u00e4m\u00e4n lausunnon tarjoaa: <a href="http://rightsstatements.org">rightsstatements.org</a>
