--- a/conf/messages_fr.properties
+++ b/conf/messages_fr.properties
@@ -1,7 +1,7 @@
-InC-OW-EU = De plus amples informations sur l\u2019Objet sont \u00e9ventuellement disponibles via l\u2019entr\u00e9e suivante de la Base de donn\u00e9es des \u0152uvres Orphelines de l\u2019UE : <a href="{0}" target="_blank">{0}</a>
+InC-OW-EU = De plus amples informations sur l\u2019Objet sont \u00e9ventuellement disponibles via l\u2019entr\u00e9e suivante de la Base de donn\u00e9es des \u0152uvres Orphelines de l\u2019UE : <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
 NoC-NC = Les restrictions concernant l\u2019utilisation de cet Objet \u00e0 des fins commerciales prendront fin le {0}
-NoC-CR = De plus amples informations sur les restrictions contractuelles sont disponibles sur <a href="{0}" target="_blank">{0}</a>
-NoC-OKLR = De plus amples informations sur les restrictions juridiques sont disponibles sur <a href="{0}" target="_blank">{0}</a>
+NoC-CR = De plus amples informations sur les restrictions contractuelles sont disponibles sur <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
+NoC-OKLR = De plus amples informations sur les restrictions juridiques sont disponibles sur <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
 Disclaimer = AVERTISSEMENT : La pr\u00e9sente d\u00e9claration vise \u00e0 aider le public \u00e0 comprendre les modalit\u00e9s d\u2019utilisation de cet Objet. Quand l\u2019Objet en question est soumis \u00e0 une Licence ou un contrat ad hoc (\u201cnon standardis\u00e9\u201d), la pr\u00e9sente d\u00e9claration se contente d\u2019\u00e9tablir un r\u00e9sum\u00e9 des effets de certaines de ses clauses. Cette D\u00e9claration ne constitue pas une Licence et ne doit pas \u00eatre utilis\u00e9e pour octroyer une licence sur votre \u0152uvre. Pour octroyer une Licence sur votre propre \u0152uvre, veuillez utiliser une Licence propos\u00e9e sur <a href="https://creativecommons.org/">https://creativecommons.org/</a>
 notices = Remarques
 provider = Cette d\u00e9claration est mise \u00e0 disposition par <a href="http://rightsstatements.org">rightsstatements.org</a>
