--- a/conf/messages_hr.properties
+++ b/conf/messages_hr.properties
@@ -1,7 +1,7 @@
-InC-OW-EU = Vi\u0161e informacija o objektu mo\u017eete prona\u0107i u sljede\u0107em zapisu u Bazi podataka djela siro\u010dadi: <a href="{0}" target="_blank">{0}</a>
+InC-OW-EU = Vi\u0161e informacija o objektu mo\u017eete prona\u0107i u sljede\u0107em zapisu u Bazi podataka djela siro\u010dadi: <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
 NoC-NC = Ograni\u010denja za komercijalno kori\u0161tenje ovog objekta istje\u010du {0}
-NoC-CR = Vi\u0161e informacija o ugovornim ograni\u010denjima mo\u017eete prona\u0107i ovdje: <a href="{0}" target="_blank">{0}</a>
-NoC-OKLR = Vi\u0161e informacija o zakonskim ograni\u010denjima mo\u017eete prona\u0107i ovdje: <a href="{0}" target="_blank">{0}</a>
+NoC-CR = Vi\u0161e informacija o ugovornim ograni\u010denjima mo\u017eete prona\u0107i ovdje: <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
+NoC-OKLR = Vi\u0161e informacija o zakonskim ograni\u010denjima mo\u017eete prona\u0107i ovdje: <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
 Disclaimer = ODRICANJE OD ODGOVORNOSTI Svrha je ove izjave pomo\u0107i javnosti da razumije kako se ovaj objekt mo\u017ee koristiti. Kada postoji (nestandardizirana) licencija ili ugovor koji regulira ponovno kori\u0161tenje povezanog objekta, ova izjava samo sa\u017eima u\u010dinke nekih njezinih uvjeta. Ovo nije licencija i ne smije se koristiti za licenciranje va\u0161eg djela. Za licenciranje vlastitog djela upotrijebite licenciju ponu\u0111enu na <a href="https://creativecommons.org/">https://creativecommons.org/</a>
 notices = Obavijesti
 provider = Ovu izjavu pru\u017ea <a href="http://rightsstatements.org">rightsstatements.org</a>
