--- a/conf/messages_it.properties
+++ b/conf/messages_it.properties
@@ -1,7 +1,7 @@
-InC-OW-EU = Maggiori informazioni riguardo all''oggetto sono disponibili nella seguente voce della Banca dati delle Opere Orfane dell''Ue: <a href="{0}" target="_blank">{0}</a>
+InC-OW-EU = Maggiori informazioni riguardo all''oggetto sono disponibili nella seguente voce della Banca dati delle Opere Orfane dell''Ue: <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
 NoC-NC = Le limitazioni all''uso commerciale di questo oggetto termineranno il {0}
-NoC-CR = Maggiori informazioni sulle restrizioni contrattuali sono disponibili qui: <a href="{0}" target="_blank">{0}</a>
-NoC-OKLR = Maggiori informazioni sulle restrizioni legali sono disponibili qui: <a href="{0}" target="_blank">{0}</a>
+NoC-CR = Maggiori informazioni sulle restrizioni contrattuali sono disponibili qui: <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
+NoC-OKLR = Maggiori informazioni sulle restrizioni legali sono disponibili qui: <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
 Disclaimer = DISCLAIMER Lo scopo di questa dichiarazione \u00e8 di aiutare il pubblico a capire come questo oggetto pu\u00f2 essere utilizzato. Quando esistono una licenza o un contratto (non standard) che disciplinano il riuso dell''oggetto associato, questa dichiarazione riassume solo gli effetti di alcuni dei loro termini. Non \u00e8 una licenza e non deve essere usata per dare in licenza la propria opera. Per concedere in licenza la propria opera, utilizzare una licenza disponibile all''indirizzo <a href="https://creativecommons.org/">https://creativecommons.org/</a>
 notices = Avvisi
 provider = Questa dichiarazione \u00e8 fornita da <a href="http://rightsstatements.org">rightsstatements.org</a>
