--- a/conf/messages_lt.properties
+++ b/conf/messages_lt.properties
@@ -1,7 +1,7 @@
-InC-OW-EU = Daugiau informacijos apie Objekt\u0105 galima rasti \u0161iame \u012fra\u0161e ES \u201ek\u016brini\u0173 na\u0161lai\u010di\u0173\u201c duomen\u0173 baz\u0117je: <a href="{0}" target="_blank">{0}</a>
+InC-OW-EU = Daugiau informacijos apie Objekt\u0105 galima rasti \u0161iame \u012fra\u0161e ES \u201ek\u016brini\u0173 na\u0161lai\u010di\u0173\u201c duomen\u0173 baz\u0117je: <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
 NoC-NC = Ribojimai komerciniam Objekto panaudojimui nustos galioti {0}
-NoC-CR = Daugiau informacijos apie sutartinius apribojimus galite rasti \u010dia: <a href="{0}" target="_blank">{0}</a>
-NoC-OKLR = Daugiau informacijos apie teisinius apribojimus galite rasti \u010dia: <a href="{0}" target="_blank">{0}</a>
+NoC-CR = Daugiau informacijos apie sutartinius apribojimus galite rasti \u010dia: <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
+NoC-OKLR = Daugiau informacijos apie teisinius apribojimus galite rasti \u010dia: <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
 Disclaimer = ATSAKOMYB\u0116S APRIBOJIMAS \u0160ios pareik\u0161ties tikslas yra pad\u0117ti visuomen\u0117s nariams suprasti, kaip \u0161\u012f Objekt\u0105 galima naudoti. Tais atvejais, kai Objekto pakartotiniam panaudojimui taikoma (nestandartin\u0117) Licencija ar sutartis, \u0161i pareik\u0161tis tik pateikia kai kuri\u0173 naudojimo s\u0105lyg\u0173 apibendrinim\u0105. \u0160i pareik\u0161tis n\u0117ra Licencija, netur\u0117tum\u0117te jos taikyti savo k\u016brybos licencijavimui. Nor\u0117dami savo k\u016brin\u012f licencijuoti, pasirinkite vien\u0105 licencij\u0173, si\u016blom\u0173 <a href="https://creativecommons.org/">https://creativecommons.org/</a>
 notices = Pastabos
 provider = \u0160i pareik\u0161tis pateikiama a <a href="http://rightsstatements.org">rightsstatements.org</a>
