--- a/conf/messages_nl.properties
+++ b/conf/messages_nl.properties
@@ -1,7 +1,7 @@
-InC-OW-EU = Meer informatie over het Item vind je op de volgende pagina in de Europese Databank voor Verweesde Werken: <a href="{0}" target="_blank">{0}</a>
+InC-OW-EU = Meer informatie over het Item vind je op de volgende pagina in de Europese Databank voor Verweesde Werken: <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
 NoC-NC = De beperkingen op commercieel gebruik van dit Item vervallen op {0}
-NoC-CR = Meer informatie over de contractuele beperkingen vind je hier: <a href="{0}" target="_blank">{0}</a>
-NoC-OKLR = Meer informatie over de wettelijke beperkingen vind je hier: <a href="{0}" target="_blank">{0}</a>
+NoC-CR = Meer informatie over de contractuele beperkingen vind je hier: <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
+NoC-OKLR = Meer informatie over de wettelijke beperkingen vind je hier: <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
 Disclaimer = DISCLAIMER Het doel van deze verklaring is om het publiek te helpen begrijpen hoe dit Item gebruikt kan worden. Wanneer er een (niet-standaard) licentie of contract is die het hergebruik van het bijbehorende Item regelt, geeft deze verklaring alleen een samenvatting van de effecten van sommige voorwaarden. Deze verklaring is geen Licentie en dient niet gebruikt te worden om je Werk te licenti\u00ebren. Gebruik een licentie aangeboden op <a href="https://creativecommons.org/">https://creativecommons.org/</a> om je werk te licenti\u00ebren.
 notices = Mededelingen
 provider = Deze verklaring wordt ter beschikking gesteld door <a href="http://rightsstatements.org">rightsstatements.org</a>
