--- a/conf/messages_pl.properties
+++ b/conf/messages_pl.properties
@@ -1,7 +1,7 @@
-InC-OW-EU = Wi\u0119cej informacji na temat tego obiektu mo\u017cna znale\u017a\u0107 w nast\u0119puj\u0105cym wpisie w bazie utwor\u00f3w osieroconych UE: <a href="{0}" target="_blank">{0}</a>
+InC-OW-EU = Wi\u0119cej informacji na temat tego obiektu mo\u017cna znale\u017a\u0107 w nast\u0119puj\u0105cym wpisie w bazie utwor\u00f3w osieroconych UE: <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
 NoC-NC = Ograniczenia wykorzystania komercyjnego dla tego obiektu przestan\u0105 obowi\u0105zywa\u0107 dnia {0}
-NoC-CR = Wi\u0119cej informacji o ograniczeniach wynikaj\u0105cych z um\u00f3w mo\u017cna znale\u017a\u0107 tutaj: <a href="{0}" target="_blank">{0}</a>
-NoC-OKLR = Wi\u0119cej informacji na temat ogranicze\u0144 prawnych mo\u017cna znale\u017a\u0107 tutaj: <a href="{0}" target="_blank">{0}</a>
+NoC-CR = Wi\u0119cej informacji o ograniczeniach wynikaj\u0105cych z um\u00f3w mo\u017cna znale\u017a\u0107 tutaj: <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
+NoC-OKLR = Wi\u0119cej informacji na temat ogranicze\u0144 prawnych mo\u017cna znale\u017a\u0107 tutaj: <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
 Disclaimer = ZASTRZE\u017bENIE. Celem tego o\u015bwiadczenia jest pom\u00f3c odbiorcom w zrozumieniu, jak wykorzystywany mo\u017ce by\u0107 dany obiekt. W sytuacji, w kt\u00f3rej istnieje (niestandardowa) licencja lub inna umowa, kt\u00f3ra reguluje zasady wykorzystania obiektu, niniejsze o\u015bwiadczenie jedynie podsumowuje skutki prawne cz\u0119\u015bci zapis\u00f3w tej umowy. To o\u015bwiadczenie to nie jest licencja i nie powinno by\u0107 wykorzystywane do licencjonowania utwor\u00f3w. W celu licencjonowania w\u0142asnych utwor\u00f3w mo\u017cna skorzysta\u0107 z licencji dost\u0119pnych na <a href="https://creativecommons.org/">https://creativecommons.org/</a>
 notices = Uwagi
 provider = To o\u015bwiadczenie jest oferowane przez <a href="http://rightsstatements.org">rightsstatements.org</a>
