--- a/conf/messages_sv-FI.properties
+++ b/conf/messages_sv-FI.properties
@@ -1,7 +1,7 @@
-InC-OW-EU = Mer information om Objektet finns i f\u00f6ljande post i EU:s databas f\u00f6r anonyma verk: <a href="{0}" target="_blank">{0}</a>
+InC-OW-EU = Mer information om Objektet finns i f\u00f6ljande post i EU:s databas f\u00f6r anonyma verk: <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
 NoC-NC = Begr\u00e4nsningarna f\u00f6r kommersiell anv\u00e4ndning av detta objekt upph\u00f6r att g\u00e4lla {0}.
-NoC-CR = Mer information om de avtalsm\u00e4ssiga begr\u00e4nsningarna finns h\u00e4r: <a href="{0}" target="_blank">{0}</a>
-NoC-OKLR = Mer information om de r\u00e4ttsliga begr\u00e4nsningarna finns h\u00e4r: <a href="{0}" target="_blank">{0}</a>
+NoC-CR = Mer information om de avtalsm\u00e4ssiga begr\u00e4nsningarna finns h\u00e4r: <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
+NoC-OKLR = Mer information om de r\u00e4ttsliga begr\u00e4nsningarna finns h\u00e4r: <a href="{0}" target="_blank"  rel="nofollow">{0}</a>
 Disclaimer = ANSVARSFRISKRIVNING. Avsikten med denna beskrivning \u00e4r att hj\u00e4lpa allm\u00e4nheten att f\u00f6rst\u00e5 hur detta Objekt f\u00e5r anv\u00e4ndas. N\u00e4r det finns en (icke-standard) Licens eller avtal som g\u00e4ller \u00e5teranv\u00e4ndning av ifr\u00e5gavarande Objekt, ger denna beskrivning endast en \u00f6versikt av inverkan av vissa villkor. Det h\u00e4r \u00e4r inte en Licens och beskrivningen b\u00f6r inte anv\u00e4ndas f\u00f6r att licensiera ditt Verk. F\u00f6r detta \u00e4ndam\u00e5l kan du anv\u00e4nda en Licens som erbjuds p\u00e5 webbsidan <a href="https://creativecommons.org/">https://creativecommons.org/</
 notices = Anm\u00e4rkiningar
 provider = Detta uttalande tillhandah\u00e5lls av <a href="http://rightsstatements.org">rightsstatements.org</a>
